...
    TextField(
        value = query,
        onValueChange = {
            viewModel.updateSearchQuery(it)
        },
        placeholder = { Text(text = stringResource(id = R.string.search)) },
        modifier = Modifier.testTag("country_search_text_field")
            .padding(all = getDP(dimenKey = R.dimen.dp_8))
            .fillMaxWidth()
            .border(width =getDP(dimenKey = R.dimen.dp_8), color = Color.White, shape = RoundedCornerShape(getDP(dimenKey = R.dimen.dp_20))),
        singleLine = true,
        textStyle = TextStyle(fontSize = 16.sp, color = Color.Black),
        leadingIcon = { Icon(Icons.Default.Search, contentDescription = EMPTY_STRING) },
...
            repeat(7) {
                item { LoadingShimmerEffect() }
            }
        }
    } else {

        LazyColumn(modifier = Modifier.testTag("country_lazy_column").padding(top = getDP(dimenKey = R.dimen.dp_8))) {
            items(items = countryList) { countryData ->

                CountryItemView(
                    commonName = countryData.name?.common,
                    officialName = countryData.name?.official,
                    capitalName = if (countryData.capital.isNotEmpty()) {
...
